fdo#86215 pool new ScPatternAttr if source and destination are different docs

(cherry picked from commit d9c15867e914d91a7e86c499ffb6ee62f5b443f6)

Conflicts:
	sc/source/core/data/column4.cxx

Change-Id: Icdb68af83a0b208f9a427ee61ae18020c8835a41
Reviewed-on: https://gerrit.libreoffice.org/13428
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>